@@ -6,7 +6,7 @@
 
 	<groupId>de.swa</groupId>
 	<artifactId>gmaf-service-mvr</artifactId>
-	<version>1.0.5-SNAPSHOT</version>
+	<version>1.0.6-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>GMAF MVR Service</name>
@@ -17,9 +17,9 @@
 		<maven.compiler.source>14</maven.compiler.source>
 		<maven.compiler.target>14</maven.compiler.target>
 		<junit.version>5.8.2</junit.version>
-		<jaxb-runtime.version>2.3.2</jaxb-runtime.version>
+		<jaxb-runtime.version>4.0.0</jaxb-runtime.version>
 		<jaxws.version>2.3.7</jaxws.version>
-		<jersey.version>2.38</jersey.version>
+		<jersey.version>2.46</jersey.version>
 		<slf4j.version>1.7.36</slf4j.version>
 	</properties>
 
@@ -39,25 +39,6 @@
 	</distributionManagement>
 
 	<dependencies>
-		<!-- REST API Dependencies-->
-		<!--		<dependency>-->
-		<!--			<groupId>org.glassfish.jersey.containers</groupId>-->
-		<!--			<artifactId>jersey-container-jdk-http</artifactId>-->
-		<!--			<version>${jersey.version}</version>-->
-		<!--		</dependency>-->
-
-		<!--		<dependency>-->
-		<!--			<groupId>org.glassfish.jersey.inject</groupId>-->
-		<!--			<artifactId>jersey-hk2</artifactId>-->
-		<!--			<version>${jersey.version}</version>-->
-		<!--		</dependency>-->
-
-		<!--		<dependency>-->
-		<!--			<groupId>org.glassfish.jersey.media</groupId>-->
-		<!--			<artifactId>jersey-media-json-jackson</artifactId>-->
-		<!--			<version>${jersey.version}</version>-->
-		<!--		</dependency>-->
-
 		<dependency>
 			<groupId>org.glassfish.jersey.core</groupId>
 			<artifactId>jersey-server</artifactId>
@@ -75,6 +56,17 @@
 			<version>${jersey.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.glassfish.jersey.containers</groupId>
+			<artifactId>jersey-container-servlet</artifactId>
+			<version>${jersey.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jersey.media</groupId>
+			<artifactId>jersey-media-multipart</artifactId>
+			<version>${jersey.version}</version>
+		</dependency>
+
 		<!-- Jersey JDK Webserver -->
 		<dependency>
 			<groupId>org.glassfish.jersey.containers</groupId>
@@ -82,34 +74,48 @@
 			<version>${jersey.version}</version>
 		</dependency>
 
-		<!--		<dependency>-->
-		<!--			<groupId>com.fasterxml.jackson.core</groupId>-->
-		<!--			<artifactId>jackson-core</artifactId>-->
-		<!--			<version>2.17.3</version>-->
-		<!--		</dependency>-->
-
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 			<version>2.14.2</version>
 		</dependency>
 
-		<!--		<dependency>-->
-		<!--			<groupId>de.swa</groupId>-->
-		<!--			<artifactId>gmaf-mvr</artifactId>-->
-		<!--			<version>1.0.5-SNAPSHOT</version>-->
-		<!--		</dependency>-->
-
 		<dependency>
 			<groupId>io.swagger.core.v3</groupId>
 			<artifactId>swagger-jaxrs2</artifactId>
-			<version>2.1.13</version>
+			<version>2.2.30</version>
+			<scope>compile</scope>
+
+		</dependency>
+
+<!--		<dependency>-->
+<!--			<groupId>io.swagger.core.v3</groupId>-->
+<!--			<artifactId>swagger-jaxrs2-servlet-initializer</artifactId>-->
+<!--			<version>2.2.30</version>-->
+<!--		</dependency>-->
+
+		<dependency>
+			<groupId>io.swagger.core.v3</groupId>
+			<artifactId>swagger-annotations</artifactId>
+			<version>2.2.30</version>
 		</dependency>
 
 		<dependency>
 			<groupId>io.swagger.core.v3</groupId>
-			<artifactId>swagger-jaxrs2-servlet-initializer-v2</artifactId>
-			<version>2.1.13</version>
+			<artifactId>swagger-jaxrs2-servlet-initializer</artifactId>
+			<version>2.2.30</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.swagger.core.v3</groupId>
+			<artifactId>swagger-models</artifactId>
+			<version>2.2.30</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.swagger.core.v3</groupId>
+			<artifactId>swagger-core</artifactId>
+			<version>2.2.30</version>
 		</dependency>
 
 		<dependency>
@@ -128,6 +134,68 @@
 			<groupId>com.sun.grizzly</groupId>
 			<artifactId>grizzly-servlet-webserver</artifactId>
 			<version>1.9.18-i</version>
+		</dependency>
+
+		<dependency>
+			<groupId>javax.xml.ws</groupId>
+			<artifactId>jaxws-api</artifactId>
+			<version>2.3.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.xml.bind</groupId>
+			<artifactId>jaxb-impl</artifactId>
+			<version>2.3.9</version>
+		</dependency>
+		<dependency>
+			<groupId>jakarta.xml.bind</groupId>
+			<artifactId>jakarta.xml.bind-api</artifactId>
+			<version>4.0.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>jakarta.jws</groupId>
+			<artifactId>jakarta.jws-api</artifactId>
+			<version>1.1.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jersey.containers</groupId>
+			<artifactId>jersey-container-servlet</artifactId>
+			<version>${jersey.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jersey.media</groupId>
+			<artifactId>jersey-media-multipart</artifactId>
+			<version>${jersey.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jersey.inject</groupId>
+			<artifactId>jersey-hk2</artifactId>
+			<version>${jersey.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.activation</groupId>
+			<artifactId>javax.activation-api</artifactId>
+			<version>1.2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.xml.bind</groupId>
+			<artifactId>jaxb-core</artifactId>
+			<version>2.3.0.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.xml.bind</groupId>
+			<artifactId>jaxb-jxc</artifactId>
+			<version>${jaxb-runtime.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.xml.bind</groupId>
+			<artifactId>jaxb-xjc</artifactId>
+			<version>${jaxb-runtime.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.activation</groupId>
+			<artifactId>jakarta.activation</artifactId>
+			<version>2.0.1</version>
 		</dependency>
 
 		<!-- JAX-WS dependencies -->
@@ -340,12 +408,6 @@
 							<addClasspath>true</addClasspath>
 							<mainClass>de.swa.gmaf.Service</mainClass>
 						</manifest>
-						<manifestEntries>
-							<Add-Opens>java.base/java.lang java.base/java.util java.base/java.lang.reflect
-								java.base/sun.security.action java.base/jdk.internal.misc java.base/java.net
-								java.base/java.nio java.base/java.lang.invoke
-							</Add-Opens>
-						</manifestEntries>
 					</archive>
 				</configuration>
 			</plugin>
